IC mapa inicial, formulario de registro

--- a/front/src/main/webapp/actualidad-tweets.html
+++ b/front/src/main/webapp/actualidad-tweets.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="bower_components/pickadate/lib/compressed/themes/default.date.css">
     <!-- fancybox-->
     <link rel="stylesheet" href="css/fancybox.css">
+    <!-- google maps-->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUBFh3N56APo7c_AdXB2k9AJjiTG_2faY&amp;sensor=FALSE"></script>
   </head>
   <body>
     <div class="main-wrapper">
@@ -93,9 +95,21 @@
             <ul>
               <li class="element tweet">
                 <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/3.jpg"/></a></div>
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/4.jpg"/></a></div>
                   <div class="content">
-                    <p>La industria textil estima crecer en 2014 sólo 1% o 2%</p>
+                    <p>Gigantes occidentales del textil apoyan acuerdos para seguridad del trabajo en Bangladesh http://mile.io/11DmJpR</p>
+                  </div>
+                </header>
+                <footer class="cf">
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eluniversal</span></a></div>
+                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
+                </footer>
+              </li>
+              <li class="element tweet">
+                <header class="cf">
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/2.jpg"/></a></div>
+                  <div class="content">
+                    <p>#Noticias. Avanza Centro de Innovación Textil de  corte nacional http://bit.ly/1pWmKLy</p>
                   </div>
                 </header>
                 <footer class="cf">
@@ -117,21 +131,9 @@
               </li>
               <li class="element tweet">
                 <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/1.jpg"/></a></div>
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/4.jpg"/></a></div>
                   <div class="content">
-                    <p>#LoMásLeído: @SE_mx evalúa la posibilidad de bajar los aranceles del sector textil, vestido y calzado para 2014  http://bit.ly/19w3D6U </p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/1.jpg"/></a></div>
-                  <div class="content">
-                    <p>#LoMásLeído: @SE_mx evalúa la posibilidad de bajar los aranceles del sector textil, vestido y calzado para 2014  http://bit.ly/19w3D6U </p>
+                    <p>Gigantes occidentales del textil apoyan acuerdos para seguridad del trabajo en Bangladesh http://mile.io/11DmJpR</p>
                   </div>
                 </header>
                 <footer class="cf">
@@ -141,25 +143,25 @@
               </li>
               <li class="element tweet">
                 <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/3.jpg"/></a></div>
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/1.jpg"/></a></div>
                   <div class="content">
-                    <p>La industria textil estima crecer en 2014 sólo 1% o 2%</p>
+                    <p>#LoMásLeído: @SE_mx evalúa la posibilidad de bajar los aranceles del sector textil, vestido y calzado para 2014  http://bit.ly/19w3D6U </p>
                   </div>
                 </header>
                 <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eluniversal</span></a></div>
                   <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
                 </footer>
               </li>
               <li class="element tweet">
                 <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/3.jpg"/></a></div>
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/5.jpg"/></a></div>
                   <div class="content">
-                    <p>La industria textil estima crecer en 2014 sólo 1% o 2%</p>
+                    <p>Universidades, respuesta a necesidades regionales</p>
                   </div>
                 </header>
                 <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@Milenio</span></a></div>
                   <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
                 </footer>
               </li>
@@ -171,27 +173,51 @@
                   </div>
                 </header>
                 <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@Milenio</span></a></div>
                   <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
                 </footer>
               </li>
               <li class="element tweet">
                 <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/5.jpg"/></a></div>
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/2.jpg"/></a></div>
                   <div class="content">
-                    <p>Universidades, respuesta a necesidades regionales</p>
+                    <p>#Noticias. Avanza Centro de Innovación Textil de  corte nacional http://bit.ly/1pWmKLy</p>
                   </div>
                 </header>
                 <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eluniversal</span></a></div>
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@Milenio</span></a></div>
                   <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
                 </footer>
               </li>
               <li class="element tweet">
                 <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/3.jpg"/></a></div>
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/2.jpg"/></a></div>
                   <div class="content">
-                    <p>La industria textil estima crecer en 2014 sólo 1% o 2%</p>
+                    <p>#Noticias. Avanza Centro de Innovación Textil de  corte nacional http://bit.ly/1pWmKLy</p>
+                  </div>
+                </header>
+                <footer class="cf">
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eleconomista</span></a></div>
+                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
+                </footer>
+              </li>
+              <li class="element tweet">
+                <header class="cf">
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/2.jpg"/></a></div>
+                  <div class="content">
+                    <p>#Noticias. Avanza Centro de Innovación Textil de  corte nacional http://bit.ly/1pWmKLy</p>
+                  </div>
+                </header>
+                <footer class="cf">
+                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eleconomista</span></a></div>
+                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
+                </footer>
+              </li>
+              <li class="element tweet">
+                <header class="cf">
+                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/2.jpg"/></a></div>
+                  <div class="content">
+                    <p>#Noticias. Avanza Centro de Innovación Textil de  corte nacional http://bit.ly/1pWmKLy</p>
                   </div>
                 </header>
                 <footer class="cf">
@@ -204,30 +230,6 @@
                   <div class="pic"><a href="#"><img src="img/twitter-thumbs/1.jpg"/></a></div>
                   <div class="content">
                     <p>#LoMásLeído: @SE_mx evalúa la posibilidad de bajar los aranceles del sector textil, vestido y calzado para 2014  http://bit.ly/19w3D6U </p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eluniversal</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/1.jpg"/></a></div>
-                  <div class="content">
-                    <p>#LoMásLeído: @SE_mx evalúa la posibilidad de bajar los aranceles del sector textil, vestido y calzado para 2014  http://bit.ly/19w3D6U </p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eluniversal</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/5.jpg"/></a></div>
-                  <div class="content">
-                    <p>Universidades, respuesta a necesidades regionales</p>
                   </div>
                 </header>
                 <footer class="cf">
