--- a/front/src/main/webapp/question.html
+++ b/front/src/main/webapp/question.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="bower_components/pickadate/lib/compressed/themes/default.date.css">
     <!-- fancybox-->
     <link rel="stylesheet" href="css/fancybox.css">
+    <!-- google maps-->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUBFh3N56APo7c_AdXB2k9AJjiTG_2faY&amp;sensor=FALSE"></script>
   </head>
   <body>
     <div class="main-wrapper">
@@ -65,70 +67,72 @@
         </div>
         <div class="panel-question-all-blocks-container">
           <div class="container">
-            <div class="panel-question-container">
-              <header>
-                <h2>Economía</h2>
-                <p>12 de 13 preguntas contestadas</p>
-              </header>
-              <fieldset>
-                <dl class="question">
-                  <dt>
-                    <label>¿Cónoce el significado de los principales indicadores económicos de su industria?</label>
-                  </dt>
-                  <dd class="answers">
-                    <ul>
-                      <li class="input-radio">
-                        <input type="radio" id="q1-a1" name="q1">
-                        <label for="q1-a1">Sí</label>
-                      </li>
-                      <li class="input-radio">
-                        <input type="radio" id="q1-a2" name="q1">
-                        <label for="q1-a2">No</label>
-                      </li>
-                    </ul>
-                  </dd>
-                </dl>
-                <dl class="question">
-                  <dt>
-                    <label>¿En qué tipo de noticias de la industria está interesado?</label>
-                  </dt>
-                  <dd class="answers">
-                    <ul>
-                      <li class="input-checkbox">
-                        <input type="checkbox" id="q2-a1" name="q2">
-                        <label for="q2-a1">Negocios</label>
-                      </li>
-                      <li class="input-checkbox">
-                        <input type="checkbox" id="q2-a2" name="q2">
-                        <label for="q2-a2">Tecnología</label>
-                      </li>
-                      <li class="input-checkbox">
-                        <input type="checkbox" id="q2-a3" name="q2">
-                        <label for="q2-a3">Acerca de sus clientes</label>
-                      </li>
-                    </ul>
-                  </dd>
-                </dl>
-                <dl class="question">
-                  <dt>
-                    <label>¿Cuales son sus principales productos o servicios?</label>
-                  </dt>
-                  <dd class="answers">
-                    <ul>											
-                      <li class="input-text">
-                        <input type="text">
-                      </li>
-                    </ul>
-                  </dd>
-                </dl>
-              </fieldset>
-            </div>
-            <div class="action">
-              <div class="half">
-                <div class="left"><br></div>
-                <div class="right"><a href="question-2.html" class="btn">Siguiente <i class='fa fa-chevron-right'></i></a></div>
+            <form action="#" class="form">
+              <div class="panel-question-container">
+                <header>
+                  <h2>Economía</h2>
+                  <p>12 de 13 preguntas contestadas</p>
+                </header>
+                <fieldset>
+                  <dl class="question">
+                    <dt>
+                      <label>¿Cónoce el significado de los principales indicadores económicos de su industria?</label>
+                    </dt>
+                    <dd class="answers">
+                      <ul>
+                        <li class="input-radio">
+                          <input type="radio" id="q1-a1" name="q1">
+                          <label for="q1-a1">Sí</label>
+                        </li>
+                        <li class="input-radio">
+                          <input type="radio" id="q1-a2" name="q1">
+                          <label for="q1-a2">No</label>
+                        </li>
+                      </ul>
+                    </dd>
+                  </dl>
+                  <dl class="question">
+                    <dt>
+                      <label>¿En qué tipo de noticias de la industria está interesado?</label>
+                    </dt>
+                    <dd class="answers">
+                      <ul>
+                        <li class="input-checkbox">
+                          <input type="checkbox" id="q2-a1" name="q2">
+                          <label for="q2-a1">Negocios</label>
+                        </li>
+                        <li class="input-checkbox">
+                          <input type="checkbox" id="q2-a2" name="q2">
+                          <label for="q2-a2">Tecnología</label>
+                        </li>
+                        <li class="input-checkbox">
+                          <input type="checkbox" id="q2-a3" name="q2">
+                          <label for="q2-a3">Acerca de sus clientes</label>
+                        </li>
+                      </ul>
+                    </dd>
+                  </dl>
+                  <dl class="question">
+                    <dt>
+                      <label>¿Cuales son sus principales productos o servicios?</label>
+                    </dt>
+                    <dd class="answers">
+                      <ul>											
+                        <li class="input-text">
+                          <input type="text">
+                        </li>
+                      </ul>
+                    </dd>
+                  </dl>
+                </fieldset>
               </div>
-            </div>
+              <div class="action">
+                <div class="half">
+                  <div class="left"><br></div>
+                  <div class="right"><a href="question-2.html" class="btn">Siguiente <i class='fa fa-chevron-right'></i></a></div>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </section>
