--- a/front/src/main/webapp/index.html
+++ b/front/src/main/webapp/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="bower_components/pickadate/lib/compressed/themes/default.date.css">
     <!-- fancybox-->
     <link rel="stylesheet" href="css/fancybox.css">
+    <!-- google maps-->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUBFh3N56APo7c_AdXB2k9AJjiTG_2faY&amp;sensor=FALSE"></script>
   </head>
   <body>
     <div class="main-wrapper">
@@ -82,20 +84,8 @@
               <ul>
                 <li class="element">
                   <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/3.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Repartirá Concurso Artesanal Textil 215 mil pesos en premios</a></div>
-                  </div>
-                  <footer class="info cf">
-                    <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>elfinanciero.com</span></a></li>
-                      <li class="date">10-Feb-2014</li>
-                    </ul>
-                  </footer>
-                </li>
-                <li class="element">
-                  <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/3.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Repartirá Concurso Artesanal Textil 215 mil pesos en premios</a></div>
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/2.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Tepeji del Río, potencia textilera</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
@@ -106,8 +96,8 @@
                 </li>
                 <li class="element">
                   <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/4.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Empresas Hidalguenses exportaron mil 510 millones de dólares en 2012</a></div>
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/3.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Repartirá Concurso Artesanal Textil 215 mil pesos en premios</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
@@ -118,12 +108,24 @@
                 </li>
                 <li class="element">
                   <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/2.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Tepeji del Río, potencia textilera</a></div>
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/1.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Competencia desleal genera pérdidas de 60% a industria textil</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>elfinanciero.com</span></a></li>
+                      <li class="date">10-Feb-2014</li>
+                    </ul>
+                  </footer>
+                </li>
+                <li class="element">
+                  <div class="content cf">
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/1.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Competencia desleal genera pérdidas de 60% a industria textil</a></div>
+                  </div>
+                  <footer class="info cf">
+                    <ul>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>terra.com</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
@@ -136,32 +138,8 @@
               <ul>
                 <li class="element">
                   <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/6.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Inversión se concentra en Pachuca, Zempoala y Tula</a></div>
-                  </div>
-                  <footer class="info cf">
-                    <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eleconomista.com</span></a></li>
-                      <li class="date">10-Feb-2014</li>
-                    </ul>
-                  </footer>
-                </li>
-                <li class="element">
-                  <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/2.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Tepeji del Río, potencia textilera</a></div>
-                  </div>
-                  <footer class="info cf">
-                    <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eleconomista.com</span></a></li>
-                      <li class="date">10-Feb-2014</li>
-                    </ul>
-                  </footer>
-                </li>
-                <li class="element">
-                  <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/4.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Empresas Hidalguenses exportaron mil 510 millones de dólares en 2012</a></div>
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/1.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Competencia desleal genera pérdidas de 60% a industria textil</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
@@ -172,12 +150,36 @@
                 </li>
                 <li class="element">
                   <div class="content cf">
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/4.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Empresas Hidalguenses exportaron mil 510 millones de dólares en 2012</a></div>
+                  </div>
+                  <footer class="info cf">
+                    <ul>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>elfinanciero.com</span></a></li>
+                      <li class="date">10-Feb-2014</li>
+                    </ul>
+                  </footer>
+                </li>
+                <li class="element">
+                  <div class="content cf">
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/4.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Empresas Hidalguenses exportaron mil 510 millones de dólares en 2012</a></div>
+                  </div>
+                  <footer class="info cf">
+                    <ul>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>elfinanciero.com</span></a></li>
+                      <li class="date">10-Feb-2014</li>
+                    </ul>
+                  </footer>
+                </li>
+                <li class="element">
+                  <div class="content cf">
                     <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/2.jpg"/></a></div>
                     <div class="title"><a href="view-new.html">Tepeji del Río, potencia textilera</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>terra.com</span></a></li>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>elfinanciero.com</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
@@ -190,12 +192,12 @@
               <ul>
                 <li class="element">
                   <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/3.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Repartirá Concurso Artesanal Textil 215 mil pesos en premios</a></div>
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/5.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Universidades, respuesta a necesidades regionales</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eleconomista.com</span></a></li>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eluniversal.com.mx</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
@@ -219,19 +221,19 @@
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>elfinanciero.com</span></a></li>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eleconomista.com</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
                 </li>
                 <li class="element">
                   <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/2.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Tepeji del Río, potencia textilera</a></div>
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/3.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Repartirá Concurso Artesanal Textil 215 mil pesos en premios</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eleconomista.com</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
