--- a/front/src/main/webapp/news-tweets.html
+++ b/front/src/main/webapp/news-tweets.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" href="bower_components/pickadate/lib/compressed/themes/default.date.css">
     <!-- fancybox-->
     <link rel="stylesheet" href="css/fancybox.css">
+    <!-- google maps-->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUBFh3N56APo7c_AdXB2k9AJjiTG_2faY&amp;sensor=FALSE"></script>
   </head>
-  <body>
+  <body ng-app="sampleApp" ng-controller="tweetsController">
     <div class="main-wrapper">
       <header class="main-header">
         <div class="main-logo"><a href="index.html">site</a></div>
@@ -27,7 +29,7 @@
       <nav class="main-nav">
         <ul class="nav-listing">
           <li><a href="index.html"><span class="icon"></span><span class="tag">Dashboard de inicio</span></a></li>
-          <li class="selected"><a href="actualidad.html"><span class="icon"></span><span class="tag">Actualidad de la industria</span></a></li>
+          <li class="selected"><a href="news.html"><span class="icon"></span><span class="tag">Actualidad de la industria</span></a></li>
           <li><a href="question.html"><span class="icon"></span><span class="tag">Perfil</span></a></li>
           <li><a href="alerts.html"><span class="icon"></span><span class="tag">Alertas y notifiaciones</span></a></li>
           <li><a href="ic.html"><span class="icon"></span><span class="tag">Inteligencia comercial</span></a></li>
@@ -48,14 +50,14 @@
                 <div class="left">
                   <div class="menu-select">
                     <ul>
-                      <li><a href="actualidad.html" class="btn-outline"><i class="fa fa-globe"></i><span>Noticias</span></a></li>
-                      <li class="selected"><a href="actualidad-tweets.html" class="btn-outline"><i class="fa fa-twitter"></i><span>Tweets</span></a></li>
-                      <li><a href="actualidad-patentes.html" class="btn-outline"><i class="fa fa-book"></i><span>Patentes</span></a></li>
+                      <li><a href="news.html" class="btn-outline"><i class="fa fa-globe"></i><span>Noticias</span></a></li>
+                      <li class="selected"><a href="news-tweets.html" class="btn-outline"><i class="fa fa-twitter"></i><span>Tweets</span></a></li>
+                      <li><a href="#" class="btn-outline"><i class="fa fa-book"></i><span>Patentes</span></a></li>
                     </ul>
                   </div>
                 </div>
                 <div class="right">
-                  <form action="actualidad-results.html">
+                  <form ng-submit="filter()">
                     <div class="filter-link"><a href="#" class="btn-outline js-open-filters"><i class="fa fa-filter"></i>Filtrar</a></div>
                     <div class="filters-listing js-filters-listing">
                       <div class="datepicker-container">
@@ -63,17 +65,17 @@
                         <div class="half">
                           <div class="left">
                             <label>de:</label>
-                            <input type="text" class="js-date-from">
+                            <input type="text" pick-a-date="fechaInicio" max-date="fechaFin">
                           </div>
                           <div class="right">
                             <label>hasta:</label>
-                            <input type="text" class="js-date-to">
+                            <input type="text" pick-a-date="fechaFin" min-date="fechaInicio">
                           </div>
                         </div>
                       </div>
                       <div class="half action">
                         <div class="left">
-                          <button type="reset" class="btn alt">Borrar</button>
+                          <button type="reset" ng-click="reset()" class="btn alt">Borrar</button>
                         </div>
                         <div class="right">
                           <button type="submit" class="btn">Buscar <i class="fa fa-search"></i></button>
@@ -91,148 +93,16 @@
           <div class="container">
             <h2 class="date">Tweets</h2>
             <ul>
-              <li class="element tweet">
+              <li ng-repeat="tweet in tweets" class="element tweet">
                 <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/2.jpg"/></a></div>
+                  <div class="pic"><a href="{{ tweet.userProfileUrl }}"><img src="{{ tweet.userProfileUrl }}"></a></div>
                   <div class="content">
-                    <p>#Noticias. Avanza Centro de Innovación Textil de  corte nacional http://bit.ly/1pWmKLy</p>
+                    <p>{{ tweet.text }}</p>
                   </div>
                 </header>
                 <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eluniversal</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/4.jpg"/></a></div>
-                  <div class="content">
-                    <p>Gigantes occidentales del textil apoyan acuerdos para seguridad del trabajo en Bangladesh http://mile.io/11DmJpR</p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eleconomista</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/3.jpg"/></a></div>
-                  <div class="content">
-                    <p>La industria textil estima crecer en 2014 sólo 1% o 2%</p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eleconomista</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/5.jpg"/></a></div>
-                  <div class="content">
-                    <p>Universidades, respuesta a necesidades regionales</p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/4.jpg"/></a></div>
-                  <div class="content">
-                    <p>Gigantes occidentales del textil apoyan acuerdos para seguridad del trabajo en Bangladesh http://mile.io/11DmJpR</p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@Milenio</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/1.jpg"/></a></div>
-                  <div class="content">
-                    <p>#LoMásLeído: @SE_mx evalúa la posibilidad de bajar los aranceles del sector textil, vestido y calzado para 2014  http://bit.ly/19w3D6U </p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/2.jpg"/></a></div>
-                  <div class="content">
-                    <p>#Noticias. Avanza Centro de Innovación Textil de  corte nacional http://bit.ly/1pWmKLy</p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@eleconomista</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/5.jpg"/></a></div>
-                  <div class="content">
-                    <p>Universidades, respuesta a necesidades regionales</p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@Milenio</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/1.jpg"/></a></div>
-                  <div class="content">
-                    <p>#LoMásLeído: @SE_mx evalúa la posibilidad de bajar los aranceles del sector textil, vestido y calzado para 2014  http://bit.ly/19w3D6U </p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@Milenio</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/1.jpg"/></a></div>
-                  <div class="content">
-                    <p>#LoMásLeído: @SE_mx evalúa la posibilidad de bajar los aranceles del sector textil, vestido y calzado para 2014  http://bit.ly/19w3D6U </p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/2.jpg"/></a></div>
-                  <div class="content">
-                    <p>#Noticias. Avanza Centro de Innovación Textil de  corte nacional http://bit.ly/1pWmKLy</p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@Milenio</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
-                </footer>
-              </li>
-              <li class="element tweet">
-                <header class="cf">
-                  <div class="pic"><a href="#"><img src="img/twitter-thumbs/4.jpg"/></a></div>
-                  <div class="content">
-                    <p>Gigantes occidentales del textil apoyan acuerdos para seguridad del trabajo en Bangladesh http://mile.io/11DmJpR</p>
-                  </div>
-                </header>
-                <footer class="cf">
-                  <div class="source"><a href="#"><i class="fa fa-twitter"></i><span>@ElFinanciero_Mx</span></a></div>
-                  <div class="source-link"><a href="#" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
+                  <div class="source"><a href="{{ tweet.userProfileUrl }}"><i class="fa fa-twitter"></i><span>@{{ tweet.userScreenName }}</span></a></div>
+                  <div class="source-link"><a href="{{ tweet.url }}" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
                 </footer>
               </li>
             </ul>
