--- a/front/src/main/webapp/news.html
+++ b/front/src/main/webapp/news.html
@@ -18,7 +18,15 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUBFh3N56APo7c_AdXB2k9AJjiTG_2faY&amp;sensor=FALSE"></script>
   </head>
   <body ng-app="sampleApp" ng-controller="NewsController">
-    <div class="main-wrapper">
+    <div ng-hide="noticiaVisible" class="main-wrapper">
+      <header class="main-header">
+        <div class="main-logo"><a href="index.html">site</a></div>
+      </header><a ng-click="regresa()" class="btn-alpha btn-back"><i class="fa fa-chevron-left"></i> Regresar</a>
+      <div class="iframe-container">
+        <iframe width="100%" height="2000px" ng-src="{{urlNoticia}}"></iframe>
+      </div>
+    </div>
+    <div ng-hide="panelVisible" class="main-wrapper">
       <header class="main-header">
         <div class="main-logo"><a href="index.html">site</a></div>
       </header>
@@ -117,7 +125,7 @@
                 </div>
                 <footer class="cf">
                   <div class="source"><a href="#"><i class="fa fa-rss"></i><span>{{ new.fuente }}</span></a></div>
-                  <div class="source-link"><a href="{{ new.url }}" class="link">Ver nota<i class="fa fa-arrow-right"></i></a></div>
+                  <div class="source-link"><a ng-click="muestra({{ new.url }})" href="#" class="link">Ver nota<i class="fa fa-arrow-right"></i></a></div>
                 </footer>
                 <div class="tags-array cf">
                   <ul>
@@ -142,7 +150,7 @@
                 </div>
                 <footer class="cf">
                   <div class="source"><a href="#"><i class="fa fa-rss"></i><span>{{ new.fuente }}</span></a></div>
-                  <div class="source-link"><a href="{{ new.url }}" class="link">Ver nota<i class="fa fa-arrow-right"></i></a></div>
+                  <div class="source-link"><a ng-click="muestra(new.url)" href="#" class="link">Ver nota<i class="fa fa-arrow-right"></i></a></div>
                 </footer>
                 <div class="tags-array cf">
                   <ul>
@@ -167,7 +175,7 @@
                 </div>
                 <footer class="cf">
                   <div class="source"><a href="#"><i class="fa fa-rss"></i><span>{{ new.fuente }}</span></a></div>
-                  <div class="source-link"><a href="{{ new.url }}" class="link">Ver nota<i class="fa fa-arrow-right"></i></a></div>
+                  <div class="source-link"><a ng-click="muestra(new.url)" href="#" class="link">Ver nota<i class="fa fa-arrow-right"></i></a></div>
                 </footer>
                 <div class="tags-array cf">
                   <ul>
@@ -192,7 +200,7 @@
                 </div>
                 <footer class="cf">
                   <div class="source"><a href="#"><i class="fa fa-rss"></i><span>{{ new.fuente }}</span></a></div>
-                  <div class="source-link"><a href="{{ new.url }}" class="link">Ver nota<i class="fa fa-arrow-right"></i></a></div>
+                  <div class="source-link"><a ng-click="muestra(new.url)" href="#" class="link">Ver nota<i class="fa fa-arrow-right"></i></a></div>
                 </footer>
                 <div class="tags-array cf">
                   <ul>
